[package]
edition = "2021"
name = "controller-c"
version = "0.1.0"
authors = ["Your Name"]
description = "C bindings for the Controller SDK"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "controller_c"

[dependencies]
account_sdk = { git = "https://github.com/cartridge-gg/controller-rs", tag = "v0.2.7" }
tokio = { version = "1.38", features = ["full"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
cc = "1.0"

[features]
default = []
